# learning-llms-from-first-principles

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: dataloader.py
setup/: python_environment_check.py
src/data/: dataloader.py  datasets.py
src/learning_llms_from_first_principles/: __init__.py
src/learning_llms_from_first_principles/artifacts/: gpt_model.pth  spam_data.csv
src/learning_llms_from_first_principles/config/: __init__.py  classify.yaml  gpt_configs.py  instruct_finetuning.yaml  train.yaml
src/learning_llms_from_first_principles/data/: __init__.py  dataloader.py  datasets.py
src/learning_llms_from_first_principles/inference/: __init__.py  generate.py
src/learning_llms_from_first_principles/models/: __init__.py  attention.py  feedforward.py  gpt.py  norm.py  transformer.py
src/learning_llms_from_first_principles/modules/: __init__.py  attention.py  feedforward.py  gpt.py  loss.py  peft.py  transformer.py
src/learning_llms_from_first_principles/quantization/: fp8.py  int8.py  per_channel.py
src/learning_llms_from_first_principles/trainer/: __init__.py  classify.py  instruct_finetuning.py  train.py
src/learning_llms_from_first_principles/utils/: __init__.py  classify_utils.py  data_utils.py  gpu_utils.py  model_utils.py  peft_utils.py  perf_utils.py  tokenization_utils.py  train_utils.py
src/models/: __init__.py  attention.py
tests/: test_data_pipeline.py  test_e2e_data_pipeline.py
tests/data/: test_classify_dataset.py  test_dataloader.py  test_datasets.py  test_instruct_dataset.py
tests/inference/: test_generate.py
tests/models/: test_attention.py  test_feedforward.py  test_gpt.py  test_norm.py  test_transformer.py
tests/modules/: test_attention.py  test_feedforward.py  test_flash_attention.py  test_gated_attention.py  test_gpt.py  test_gqa.py  test_loss.py  test_norm.py  test_peft.py  test_transformer.py
tests/quantization/: test_fp8.py  test_int8.py  test_per_channel.py
tests/trainer/: test_classify.py  test_instruct_finetuning.py  test_train.py
tests/utils/: test_classify_utils.py  test_data_utils.py  test_gpu_utils.py  test_peft_utils.py  test_perf_utils.py  test_tokenization_utils.py  test_train_utils.py
