[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-first-principles"
version = "0.1.0"
description = "Learning LLMs from First Principles"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.1",
    "tiktoken>=0.5.1",
    "jupyterlab>=4.0",
    "matplotlib>=3.7.1",
    "tensorflow>=2.15.0",
    "tqdm>=4.66.1",
    "numpy>=1.25,<2.0",
    "pandas>=2.2.1",
    "psutil>=5.9.5"
]

[tool.setuptools.packages.find]
where = ["."]
